<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="country"
            type="com.ruchanokal.europeancountries.model.CountryItem" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="15dp"
        app:cardCornerRadius="5dp"
        android:backgroundTint="@color/whitegray"
        android:elevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.DetailsFragment">

            <ImageView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:downloadUrl="@{country.flags.png}"
                android:id="@+id/flagImageView"/>

            <TextView
                android:id="@+id/countryNameTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flagImageView"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:textColor="@color/black"
                android:text="@{country.name.official}"/>

            <View
                android:id="@+id/line"
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryNameTextView"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="25dp"
                android:background="#32000000"/>

            <TextView
                android:id="@+id/capitalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/capital"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/countryCapitalTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/capitalTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:text="@{country.capital.get(0)}"/>

            <TextView
                android:id="@+id/subregionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/subregion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryCapitalTextView" />


            <TextView
                android:id="@+id/countrySubregionTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subregionTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:text="@{country.subregion}"/>

            <TextView
                android:id="@+id/languageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/languages"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countrySubregionTextView" />


            <TextView
                android:id="@+id/countryLanguageTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/languageTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:showLanguages="@{country.languages}" />

            <TextView
                android:id="@+id/populationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/population"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryLanguageTextView" />


            <TextView
                android:id="@+id/countryPopulationTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/populationTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:beautifyNumberFormat="@{country.population}" />

            <TextView
                android:id="@+id/borderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/borders"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/countryPopulationTextView" />


            <TextView
                android:id="@+id/countryBordersTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/borderTitle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:layout_marginTop="3dp"
                android:textColor="@color/black"
                android:showBorders="@{country.borders}"/>


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>




</layout>

